@@ -1,5 +1,5 @@
 AUX qnapi-0.1.6_rc2-gentoo.diff 4271 RMD160 4846137f5023e30dc72f94a8b0bfffc7f551f087 SHA1 04459eea0d105fc51372fb7f978c269903fa748c SHA256 7e1d18cb2482f7c5749baf46c0359d5732f2f44a3bc2feb9ac62e2e5dda058e0
 DIST qnapi-0.1.6-rc2.tar.gz 211567 RMD160 2696c22f2db7cf9e0e546ad8c08b46070a4186c0 SHA1 884e7b7d9643f8f0d82ece2720f9d3c251fd8d44 SHA256 a2ae2d0b5d800565493c8840f5f584d480daaee1f01742689d927fdf68c5150a
-EBUILD qnapi-0.1.6_rc2.ebuild 1565 RMD160 07ef383e8ee02319fc000a7970ca92091c84f4d6 SHA1 17a2d0fcea416543f68de51ee5b26ee55baaa9d8 SHA256 9538d63af38fde473cd06ca2072fbebbb3ea45395ee08b5843e57ca189342fef
-MISC ChangeLog 361 RMD160 0206fa583ba8b0b3e6765a2a7dcb86aa615fbab4 SHA1 fec62ee39aaa192f3d844e58760be0077818a328 SHA256 57c7ce0cb8f0d1864067272e7f8a1b3aa4cc02c74ea2fcabbd74844c94e19f32
+EBUILD qnapi-0.1.6_rc2.ebuild 1547 RMD160 677c665aebd0fcac01106c9c1f2675927c620ca7 SHA1 06370debc79be507cfa464021b3d43017c3701bb SHA256 3c9f5ce712868d63f0ca2231e09cff9d4c10d019cf9ef17ca17af223320314b3
+MISC ChangeLog 560 RMD160 232f2ab1ea4956bf15682a9a5f5841aff6708378 SHA1 16464034eafaa75b07199a93b80c0b4bbc9ac6f9 SHA256 958e5c32c567a4050310bb69cfb86998232e20c6284e388f5c494744dfb96795
 MISC metadata.xml 368 RMD160 0366e6b013a6e53c0bf0d8491bddceac70fc6bb0 SHA1 063b035727fc758750280ae90001027f1e7e9b36 SHA256 3ddeb504da41a09a71ba9c7daaac033331f0476d6fbc644fccbadf41e217a3cc
