@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
+  qnapi-0.1.6_rc2.ebuild:
+  eqmake4 (much like econf) does not need the '|| die' statement. Updated
+  HOMEPAGE, whitespace & quoting.
+
   09 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
   +qnapi-0.1.6_rc2.ebuild, +files/qnapi-0.1.6_rc2-gentoo.diff,
   +metadata.xml:
